// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrimaryButton /> matches disabled snapshot 1`] = `
<DocumentFragment>
  <button
    class="css-1w798tj"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`<PrimaryButton /> matches snapshot 1`] = `
<DocumentFragment>
  <button
    class="css-wndh17"
  >
    Label
  </button>
</DocumentFragment>
`;
